fixed bottom spacing

--- a/css/default.css
+++ b/css/default.css
@@ -51,6 +51,7 @@ pre {
 .flex-main {
   flex:1;
   padding:1em;
+  padding-bottom:5em;
 }
 
 .flex-widget {
